Changed tex file to latest

--- a/surajtripathi.tex
+++ b/surajtripathi.tex
@@ -6,32 +6,32 @@
 \begin{resume}
 
 \section{EXPERIENCE} 
-\textbf{Software Engineer, TranServ, India \hfill Aug'16-Present} \\
+\textbf{Software Engineer, Browserstack, India \hfill Dec'17 - Present} \\
+Worked on Non JailBroken devices and made Chrome devtools work for them. \\
+Integrated Chromium 65 and patched Devtools for Live and Automate platform. \\
+\textbf{\textit{Technologies used : }} Mysql, Ruby, Objective C, Node Js \\
+\\
+\textbf{Software Engineer, TranServ, India \hfill Aug'16 - Nov'17} \\
 \textbf{\textit{``Udio Wallet"}} \\
 Worked to build a wallet framework Udio2.0(Java) from scratch and to migrate all of the core functionalities and data of Udio1.0 framework(php). \\
-Worked on various modules like SignUp, Card-Order, Digital Gift Card, Wallfeeds. \\
-Also worked on deeplink and sms module. \\
 Worked on various Partner API's which provide Debit, Credit, Reporting Functionalities.\\
-Integrated Api's on html frontend. \\
 \textbf{\textit{Technologies used : }} Java, Redis, Mysql, Javascript \\
 \\
-\textbf{Software Engineer , Mobileum, India \hfill Feb'15-July'16} \\
+\textbf{Software Engineer , Mobileum, India \hfill Feb'15 - July'16} \\
 \textbf{\textit{``iCampaign 1.0"}} \\
 Worked to build Generic rule based campaign pushing sms-framework.\\
 Took ownership of the rule-engine framework which allowed configuration of complex business rules to target users. \\
 Added AB Testing feature in the iCampaign framework.\\
-\textbf{\textit{Technologies used : }} Java, Oracle \\
-\\
-\textbf{\textit{``OM 7.0"}} \\
 Worked on USSD response framework for Telecom partners which would allow querying of Roaming plans and activation of the same.\\
 \textbf{\textit{Technologies used : }} Java, Oracle \\
+\\
 
 \section{SKILLS} 
-\textbf{Languages : }Java(Proficient), C(Good), C++(Good), Python(Acquainted) \\HTML(Acquainted), CSS(Acquainted), Javascript(Acquainted) \\
-\textbf{Frameworks : }Spring, Hibernate, Mybatis, JDBC \\
+\textbf{Languages : }Java(Proficient), C(Good), C++(Good), Python(Acquainted) \\HTML(Acquainted), CSS(Acquainted), Javascript(Good), Objective-C(Acquainted), Ruby(Acquainted) \\
+\textbf{Frameworks : }Spring, Hibernate, Mybatis, JDBC, Rails, Node.js \\
 \textbf{Databases : }Mysql, Oracle, Redis \\
-\textbf{Tools : }Eclipse, Maven, Git, Tomcat, Postman, JIRA \\
-\textbf{Systems : }Linux, Windows
+\textbf{Tools : }Eclipse, Maven, Git, Tomcat, Postman, JIRA, Asana \\
+\textbf{Systems : }Linux, Windows, Mac-Os
 
 \section{EDUCATION} 
 \textbf{\textit{CDAC, PG Diploma in Advance Computing} \hfill Aug'14-Jan'15} \\
