--- a/surajtripathi.tex
+++ b/surajtripathi.tex
@@ -6,10 +6,26 @@
 \begin{resume}
 
 \section{EXPERIENCE} 
-\textbf{Software Engineer, Browserstack, India \hfill Dec'17 - Present} \\
-Worked on Non JailBroken devices and made Chrome devtools work for them. \\
-Integrated Chromium 65 and patched Devtools for Live and Automate platform. \\
-\textbf{\textit{Technologies used : }} Mysql, Ruby, Objective C, Node Js \\
+\textbf{Team Lead, Browserstack, India \hfill Apr'21 - Present} \\
+\textbf{Senior Software Engineer, Browserstack, India \hfill Apr'19 - Mar'21} \\
+\textbf{Software Engineer, Browserstack, India \hfill Dec'17 - Mar'19} \\
+\begin{enumerate}
+   \item Leading AppLive product and managing Sprints, Planning and OKR Execution within the team.
+   \item Core Mobile OS Feature Support
+   \begin{itemize}
+     \item Add support for Devtools on IOS
+     \item Support for IP and GPS GeoLocation
+     \item Biometric Authentication on Android
+     \item Built tool to allow users to access iOS Settings
+   \end{itemize}
+   \item Insession Product Management tools integration
+   \item Device Cleanup Service Rewrite
+   \item App Upload time optimization
+   \item Reduce Session Start Time for IOS from 25sec to 7 sec
+   \item Scaled internal Log Pusher service to handle 5x more traffic
+   \item Built Sales Target Dashboard for Internal Consumption
+\end{enumerate}
+\textbf{\textit{Technologies used : }} Ruby on Rails, Node Js, Objective C,BigQuery, Python, MySql\\
 \\
 \textbf{Software Engineer, TranServ, India \hfill Aug'16 - Nov'17} \\
 \textbf{\textit{``Udio Wallet"}} \\
@@ -27,10 +43,10 @@ Worked on USSD response framework for Telecom partners which would allow queryin
 \\
 
 \section{SKILLS} 
-\textbf{Languages : }Java(Proficient), C(Good), C++(Good), Python(Acquainted) \\HTML(Acquainted), CSS(Acquainted), Javascript(Good), Objective-C(Acquainted), Ruby(Acquainted) \\
-\textbf{Frameworks : }Spring, Hibernate, Mybatis, JDBC, Rails, Node.js \\
-\textbf{Databases : }Mysql, Oracle, Redis \\
-\textbf{Tools : }Eclipse, Maven, Git, Tomcat, Postman, JIRA, Asana \\
+\textbf{Languages : }Java(Proficient), Nodejs (Good), C(Good), C++(Good), Python(Good), Ruby(Good), Javascript(Good), \\HTML(Acquainted), CSS(Acquainted), Objective-C(Acquainted) \\
+\textbf{Frameworks : }Rails, Express, Django, Spring, Hibernate, Mybatis, JDBC \\
+\textbf{Databases : }Mysql, Oracle, Redis, Mongodb, BigQuery, Postgresql \\
+\textbf{Tools : }Sublime, WebStorm, IntelliJ, Eclipse, Maven, Git, Tomcat, Postman, JIRA, Asana \\
 \textbf{Systems : }Linux, Windows, Mac-Os
 
 \section{EDUCATION} 
@@ -48,5 +64,6 @@ Percentage Obtained : 67\% \\
 
 \textbf{\textit{Linkedin.}} https://www.linkedin.com/in/surajtripathi793 \\
 \textbf{\textit{GitHub.}} https://github.com/surajtripathy07  \\
+\textbf{\textit{Personal Website.}} https://surajtripathi.info\\
 \end{resume}
 \end{document}
