--- a/surajtripathi.tex
+++ b/surajtripathi.tex
@@ -6,7 +6,14 @@
 \begin{resume}
 
 \section{EXPERIENCE} 
-\textbf{Team Lead, Browserstack, India \hfill Apr'21 - Present} \\
+\textbf{Senior Backend Engineer, Gitlab, Remote \hfill Jan'22 - Present} \\
+Worked on various projects as part of the Utilization team in the Fulfillment Department.
+\begin{enumerate}
+  \item Worked on enforcing Storage limitations on Gitlab for Free users
+\end{enumerate}
+\textbf{\textit{Technologies used : }} Ruby on Rails, Go, Postgres\\
+\\
+\textbf{Team Lead, Browserstack, India \hfill Apr'21 - Jan-22} \\
 \textbf{Senior Software Engineer, Browserstack, India \hfill Apr'19 - Mar'21} \\
 \textbf{Software Engineer, Browserstack, India \hfill Dec'17 - Mar'19} \\
 \begin{enumerate}
