--- a/surajtripathi.tex
+++ b/surajtripathi.tex
@@ -6,10 +6,19 @@
 \begin{resume}
 
 \section{EXPERIENCE} 
-\textbf{Senior Backend Engineer, Gitlab, Remote \hfill Jan'22 - Present} \\
-Worked on various projects as part of the Utilization team in the Fulfillment Department.
+\textbf{Senior Backend Engineer (SDE-3), Gitlab, Remote \hfill Jan'22 - Present} \\
 \begin{enumerate}
-  \item Worked on enforcing Storage limitations on Gitlab for Free users
+  \item Mentored junior members to promotion.
+  \item Worked with Product managers in KR definition and for tracking progressions.
+  \item Partnered with Product Managers in quarter planning as an Engineering counterpart.
+  \item Performed agile sprint planning and management for the team.
+  \item Worked on various projects as part of the Utilization team in the Fulfillment Department.
+  \begin{itemize}
+    \item Storage utilization and enforcement of limitations on Gitlab for Free users
+    \item Delivered NonBillable to Billable Promotion Mgmt from MVP to Feature Complete.
+    \item Promotion Management and Block Seat Overages for SAML, LDAP, SCIM integrations.
+  \end{itemize}
+  \item Resolved multiple customer issues to keep error budgets in check.
 \end{enumerate}
 \textbf{\textit{Technologies used : }} Ruby on Rails, Go, Postgres\\
 \\
@@ -50,7 +59,7 @@ Worked on USSD response framework for Telecom partners which would allow queryin
 \\
 
 \section{SKILLS} 
-\textbf{Languages : }Java(Proficient), Nodejs (Good), C(Good), C++(Good), Python(Good), Ruby(Good), Javascript(Good), \\HTML(Acquainted), CSS(Acquainted), Objective-C(Acquainted) \\
+\textbf{Languages : }Java(Good), Nodejs (Good), C(Good), C++(Good), Python(Good), Ruby(Good), Javascript(Good), \\HTML(Acquainted), CSS(Acquainted), Objective-C(Acquainted) \\
 \textbf{Frameworks : }Rails, Express, Django, Spring, Hibernate, Mybatis, JDBC \\
 \textbf{Databases : }Mysql, Oracle, Redis, Mongodb, BigQuery, Postgresql \\
 \textbf{Tools : }Sublime, WebStorm, IntelliJ, Eclipse, Maven, Git, Tomcat, Postman, JIRA, Asana \\
